# gentoo-dotfiles

.config/compton/: config  config-bak
.config/i3/: compton.sh  config  config-vnc  dunst.sh  feh.sh  gnome-settings.sh  gnome.sh  i3lock-color.sh  i3lock-fancy-temp.sh  i3lock-fancy.sh  klaunch_app.sh  launch_app.sh  nitrogen.sh  nm-applet.sh  onedrived.sh  polybar-vnc.sh  polybar.sh  polychromatic.sh  slack.sh
.config/nvim/: init.vim
.config/polybar/: Pause-dark.py  Pause.py  Play-dark.py  Play.py  aconfig  clock.sh  coinbase  compton.sh  config  config.darkwallpapersusethisone  config.mpd  cputemp.sh  darkpanel-config  eix-updates  gkern.sh  hideIt.sh  launch.sh  mpris-dark.sh  mpris.sh  network.sh  pkg.sh  polybar.sh  restart.sh  spotify  transparentdarkconfig  trash  update.sh  weather  weather-git.sh  wtime.php
.config/polybar/python/: coinbase
.config/taffybar/: my-taffybar.cabal  stack-nix.yaml  stack.yaml.nix  taffybar.hs  taffybar1.hs  taffybar3.hs
.config/xmobar/: xmobarrc
.xmonad/: my-xmonad.cabal  restart-taffybar  stack-nix.yaml  stack.yaml  stack.yaml.nix  xmonad-simple.hs  xmonad.hi  xmonad.hs  xmonad.state  xmonad1.hs
.xmonad/lib/XMonad/Layout/: FocusWindow.hs  MasterOverlay.hs  MiddleColumn.hs  MyLayouts.hs  WindowColumn.hs
.xmonad/lib/XMonad/Util/: FileLogger.hs  WindowFinder.hs
