name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  -- other-modules lists custom modules in my ~/.xmonad/lib/ directory
  other-modules:       XMonad.Util.WindowFinder
                     , XMonad.Util.FileLogger
                     , XMonad.Layout.FocusWindow
                     , XMonad.Layout.MiddleColumn
                     , XMonad.Layout.WindowColumn
                     , XMonad.Layout.MasterOverlay
  build-depends:       base
                     , xmonad >= 0.15
                     , xmonad-contrib >= 0.15
                     , xmonad-wallpaper
                     , magic >= 1.1
                     , containers
                     , mtl
                     , lens
                     , X11
  hs-source-dirs:      lib
  default-language:    Haskell2010
  -- -Wall
  ghc-options:         -Werror -fno-warn-missing-signatures -threaded

